[package]
name = "tracing-unwrap"
version = "1.0.0"
authors = ["Andre Braga Reis <andre@brg.rs>"]
edition = "2021"
description = "Extension traits for logging failed unwraps to a tracing subscriber."
license = "Apache-2.0/MIT"
repository = "https://github.com/abreis/tracing-unwrap"
documentation = "https://docs.rs/tracing-unwrap"
keywords = ["log", "logging", "tracing"]
categories = ["development-tools::debugging"]
readme = "README.md"

[features]
default = ["panic-quiet"]
# Makes failed unwraps panic with an empty message.
panic-quiet = []
# Includes caller location in the tracing event
log-location = []

[dependencies]
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
